--- a/views/pages/home_page.html
+++ b/views/pages/home_page.html
@@ -74,7 +74,11 @@
 
               <!-- HIDDEN DI MOBILE -->
               <td class="hidden md:table-cell py-1.5 px-2 text-center text-slate-700">
-                {{ if $r.Pulang }}{{ $r.Pulang }}{{ else }}-{{ end }}
+                {{ if $r.Pulang }}
+                  {{ $r.Pulang }}
+                {{ else }}
+                  -
+                {{ end }}
               </td>
 
               <td class="py-1.5 px-2 text-center whitespace-nowrap">
@@ -133,9 +137,10 @@
           <tbody>
             {{ range $i, $r := .TanpaKeterangan }}
             <tr class="border-t border-slate-200 hover:bg-slate-100 transition">
-              <td class="py-1.5 px-2 text-center text-slate-600">
+              <!-- <td class="py-1.5 px-2 text-center text-slate-600">
                 {{ add $i 1 }}
-              </td>
+              </td> -->
+              <td class="no-cell text-center text-slate-600"></td>
 
               <!-- HIDDEN DI MOBILE -->
               <td class="hidden md:table-cell py-1.5 px-2 text-center font-mono text-slate-600">
