--- a/views/pages/siswa_page.html
+++ b/views/pages/siswa_page.html
@@ -53,6 +53,10 @@
             Jenis Kelamin
           </th>
 
+          <th class="hidden md:table-cell py-2 px-2 md:p-3 text-center">
+            Alamat
+          </th>
+
           <th class="py-2 px-2 md:p-3 text-center">
             Status
           </th>
@@ -85,6 +89,10 @@
 
           <td class="hidden md:table-cell py-1.5 px-2 md:p-3 text-center">
             {{ $s.JenisKelamin }}
+          </td>
+
+          <td class="hidden md:table-cell py-1.5 px-2 md:p-3 text-center">
+            {{ $s.Alamat }}
           </td>
 
           <td class="py-1.5 px-2 md:p-3 text-center">
